--- a/views/admin_dashboard.handlebars
+++ b/views/admin_dashboard.handlebars
@@ -4,26 +4,25 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 
 
-    <title>Administrator</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Home</a>
-          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <div style="align-items: center;justify-content: center">
+          <div class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div style="align-items: center;justify-content: center;border :0;border-color: transparent">
                 <span class="toggler-icon top-bar"></span>
                 <span class="toggler-icon middle-bar"></span>
                 <span class="toggler-icon bottom-bar"></span>
             </div>
-          </button>
+          </div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -40,9 +39,13 @@
               </li>
             </ul>
           </div>
+
         </div>
       </nav>
-      <h1>Hello, Admin</h1>
+      <div class="d-flex justify-content-between">
+        <h2 class="flex-grown">Hello, Admin</h2>
+        <button id="btnLogOut" class="btn btn-danger float-right">Log Out</button>
+      </div>
     </div>
     
   
@@ -50,13 +53,19 @@
 <div class="m-4">
     <ul class="nav nav-tabs" id="myTab">
         <li class="nav-item">
-            <a href="#home" class="nav-link active" data-bs-toggle="tab"><i class="fas fa-chart-pie fa-fw me-2"></i> Home</a>
+            <a href="#home" class="nav-link active" data-bs-toggle="tab"><i class="fa-solid fa-user-check" style="color: rgb(92, 208, 92)"></i> Đã kích hoạt</a>
         </li>
         <li class="nav-item">
-            <a href="#profile" class="nav-link" data-bs-toggle="tab"><i class="fas fa-chart-line fa-fw me-2"></i>Statistic</a>
+            <a href="#profile" class="nav-link" data-bs-toggle="tab"><i class="fa-solid fa-user-plus" style="color: rgb(114, 182, 231)"></i> Chờ kích hoạt</a>
         </li>
         <li class="nav-item">
-            <a href="#messages" class="nav-link" data-bs-toggle="tab"><i class="fas fa-cogs fa-fw me-2"></i>Settings</a>
+            <a href="#messages" class="nav-link" data-bs-toggle="tab"><i class="fa-solid fa-user-lock" style="color: rgb(254, 194, 53)"></i> Tạm khóa</a>
+        </li>
+        <li class="nav-item">
+            <a href="#lock_users" class="nav-link" data-bs-toggle="tab"><i class="fa-solid fa-user-xmark" style="color: rgb(244, 83, 83)"></i> Khóa vô thời hạn</a>
+        </li>
+        <li class="nav-item">
+            <a href="#history_trade" class="nav-link" data-bs-toggle="tab"><i class="fa-solid fa-chart-line"></i> Lịch sử giao dịch</a>
         </li>
     </ul>
     <div class="tab-content">
@@ -65,24 +74,159 @@
               <table class="table table-hover border">
                 <thead>
                   <tr>
+                    <th>ID</th>
                     <th>Name</th>
                     <th>Email</th>
-                    <th>Phone</th>
-                    <th>Birthdate</th>
-                    <th>Address</th>
+                    <th>Created At</th>
                     <th>Status</th>
-                    <th>Options</th>
                   </tr>
                 </thead>
+                 <tr style="cursor: pointer">
+                    <td><a href="admin/users/123">294300f33fd</a></td>
+                    <td>Nguyen Duc Trong</td>
+                    <td>ductrong1313@gmail.com</td>
+                    <td>12:00:21 PM 22/12</td>
+                    <td>Active</td>
+                  </tr>
+                  {{#each active_list}}
+                    <tr>
+                        <td>
+                            <a href="admin/users/{{id}}">{{id}}</a>
+                        </td>
+                        <td>{{name}}</td>
+                        <td>{{email}}</td>
+                        <td>{{createdAt}}</td>
+                        <td>{{status}}</td>
+                    </tr>
+                {{/each}}
               </table>
         </div>
         <div class="tab-pane fade" id="profile">
-            <h4 class="mt-2">Profile tab content</h4>
-            <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+            <h4 class="my-3">Danh sách tài khoản chờ kích hoạt</h4>
+            <table class="table table-hover border">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Created At</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                 <tr style="cursor: pointer">
+                    <td><a href="admin/users/123">294300f33fd</a></td>
+                    <td>Nguyen Duc Trong</td>
+                    <td>ductrong1313@gmail.com</td>
+                    <td>12:00:21 PM 22/12</td>
+                    <td>Active</td>
+                  </tr>
+                  {{#each active_list}}
+                    <tr>
+                        <td>
+                            <a href="admin/users/{{id}}">{{id}}</a>
+                        </td>
+                        <td>{{name}}</td>
+                        <td>{{email}}</td>
+                        <td>{{createdAt}}</td>
+                        <td>{{status}}</td>
+                    </tr>
+                {{/each}}
+              </table>
         </div>
         <div class="tab-pane fade" id="messages">
-            <h4 class="mt-2">Messages tab content</h4>
-            <p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit velit. Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem. Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.</p>
+            <h4 class="my-3">Danh sách tài khoản đang tạm khóa</h4>
+            <table class="table table-hover border">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Created At</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                 <tr style="cursor: pointer">
+                    <td><a href="admin/users/123">294300f33fd</a></td>
+                    <td>Nguyen Duc Trong</td>
+                    <td>ductrong1313@gmail.com</td>
+                    <td>12:00:21 PM 22/12</td>
+                    <td>Active</td>
+                  </tr>
+                  {{#each active_list}}
+                    <tr>
+                        <td>
+                            <a href="admin/users/{{id}}">{{id}}</a>
+                        </td>
+                        <td>{{name}}</td>
+                        <td>{{email}}</td>
+                        <td>{{createdAt}}</td>
+                        <td>{{status}}</td>
+                    </tr>
+                {{/each}}
+              </table>
+        </div>
+        <div class="tab-pane fade" id="lock_users">
+            <h4 class="my-3">Danh sách tài khoản bị khóa vô thời hạn</h4>
+            <table class="table table-hover border">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Created At</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                 <tr style="cursor: pointer">
+                    <td><a href="admin/users/123">294300f33fd</a></td>
+                    <td>Nguyen Duc Trong</td>
+                    <td>ductrong1313@gmail.com</td>
+                    <td>12:00:21 PM 22/12</td>
+                    <td>Active</td>
+                  </tr>
+                  {{#each active_list}}
+                    <tr>
+                        <td><a href="admin/users/{{id}}">{{id}}</a></td>
+                        <td>{{name}}</td>
+                        <td>{{email}}</td>
+                        <td>{{createdAt}}</td>
+                        <td>{{status}}</td>
+                    </tr>
+                {{/each}}
+              </table>
+        </div>
+        <div class="tab-pane fade" id="history_trade">
+            <h4 class="my-3">Lịch sử giao dịch của người dùng</h4>
+            <table class="table table-hover border">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Sender</th>
+                    <th>Receiver</th>
+                    <th>Amount</th>
+                    <th>Created At</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                 <tr style="cursor: pointer">
+                    <td><a href="admin/trades/123">1234</a></td>
+                    <td><a href="admin/users/123">Nguyen Duc Trong</a></td>
+                    <td><a href="admin/users/123">Tran Si Nguyen</a></td>
+                    <td>200.000</td>
+                    <td>12:00:21 PM 22/12</td>
+                    <td>Active</td>
+                  </tr>
+                  {{#each active_list}}
+                    <tr>
+                       <td><a href="admin/trades/{{id}}">{{id}}</a></td>
+                        <td><a href="admin/users/{{sender_id}}">{{sender_name}}</a></td>
+                    <td <a href="admin/users/{{receiver_id}}">{{receiver_name}}</td>
+                    <td>{{amount}}</td>
+                    <td>{{createdAt}}</td>
+                    <td>{{status}}</td>
+                    </tr>
+                {{/each}}
+              </table>
         </div>
     </div>
 </div>
