--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,9 @@
 a:hover, a:visited, a:link, a:active{
     text-decoration: none;
 }
+
+.btn-card{
+    width: 7rem !important;
+    height: 5rem !important;
+    background-color:rgb(243, 243, 243);
+}
