--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -74,11 +74,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6"></div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light">Newsletter</h4>
+                    <h4 class="text-light">Nhận thông báo</h4>
                     <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
                     <form action="">
                         <div class="input-group">
-                            <input type="text" class="form-control p-3 border-0" placeholder="Your Email">
+                            <input type="text" class="form-control p-3 border-0" placeholder="Nhập email của bạn">
                             <button class="btn btn-primary">Sign Up</button>
                         </div>
                     </form>
@@ -100,8 +100,10 @@
     </div>
     <!-- Footer End -->
     
-
+    <div class="d-flex justify-content-center py-4">
+      <button class="btn btn-success btn-card"></button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-
+<script src="js/main.js"></script>
 </html>
