--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -55,8 +55,14 @@
   </nav>
   {{{body}}}
 
-  <!-- Footer Start -->
-  <div class="container-fluid bg-secondary bg-footer text-light-gray py-5">
+  
+  <!-- Footer End -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+<!-- Footer Start -->
+  <footer class="container-fluid bg-secondary bg-footer text-light-gray py-5">
     <div class="container py-5">
       <div class="row g-5">
 
@@ -124,11 +130,6 @@
       <div class="col-2"> <a href="#" class="btn btn-lg btn-secondary btn-lg-square rounded-circle back-to-top"><i
             class=" fa-solid fa-arrow-up"></i></a></div>
     </div>
-  </div>
-  <!-- Footer End -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-</body>
+  </footer>
 <script src="js/main.js"></script>
 </html>
