--- a/views/menu/withdraw.hbs
+++ b/views/menu/withdraw.hbs
@@ -12,7 +12,7 @@
         </div>
         <div class="mb-3">
             <label for="card_cvv" class="form-label">Mã CVV</label>
-            <input type="text" class="form-control" id="card_cvv" required placeholder="Vui lòng nhập CVV thẻ">
+            <input type="number" class="form-control" id="card_cvv" required placeholder="Vui lòng nhập CVV thẻ">
         </div>
         <div class="mb-3">
             <label for="desc" class="form-label">Ghi chú thêm</label>
@@ -20,12 +20,12 @@
         </div>
         <div class="mb-3">
             <label for="money" class="form-label">Số tiền rút</label>
-            <input type="number" class="form-control" id="money" start="0" step="50000" value="0"  required>
+            <input type="number" class="form-control" id="money" min="0" step="50000" value="0"  required>
         </div>
         <!-- TODO: ADD DYNAMIC RANGE --->
         <div class="mt-3 mb-3">
-            <h4 class="mt-3 text-end">Phí dịch vụ (5%): <span class="text-primary">0 đ</span></h4>
-            <h4 class="mt-3 text-end">Tổng tiền: <span class="text-danger">0 đ</span></h4>
+            <h4 class="mt-3 text-end">Phí dịch vụ (5%): <span class="text-primary" id="u-menu-fee-withdraw">0 đ</span></h4>
+            <h4 class="mt-3 text-end">Tổng tiền: <span class="text-danger"  id="u-menu-total">0 đ</span></h4>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
