--- a/views/menu/withdraw.hbs
+++ b/views/menu/withdraw.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- TODO: ADD ACTION URL -->
     <form action="" method="post">
-        <h3> Thông tin thẻ cần rút</h3>
+        <h3> Thông tin thẻ cần để chuyển tiền từ ví</h3>
         <div class="mb-3">
             <label for="card_id" class="form-label">ID thẻ</label>
             <input type="text" class="form-control" id="card_id" required placeholder="Vui lòng nhập ID thẻ">
