--- a/views/menu/deposit.hbs
+++ b/views/menu/deposit.hbs
@@ -16,7 +16,7 @@
         </div>
         <div class="mb-3">
             <label for="deposit_money" class="form-label">Số tiền rút</label>
-            <input type="number" class="form-control" id="deposit_money" min="0" step="50000" value="0"  required>
+            <input type="number" class="form-control" id="deposit_money" min="1" value="1"  required>
         </div>
         <!-- TODO: ADD DYNAMIC RANGE --->
         <div class="mt-3 mb-3">
