fix layout and add noti

--- a/views/menu/notification.hbs
+++ b/views/menu/notification.hbs
@@ -1,1 +1,28 @@
-<img src="https://static.mservice.io/img/momo-upload-api-mobifone-190103163429.png" class="img-fluid" alt="">
+<div class="container">
+    <div>
+        <h2>Giới thiệu webiste ví điện tử KNT mới.</h2>
+        <i class="text-secondary">Chủ nhật, 29/05/2022 10:54 AM</i>
+    </div>
+    <div>
+        <img src="https://play-lh.googleusercontent.com/sTa7pVeKFB7ffjD6lQwR8EQ4DqxF-4oWoHJPWf6iHZkW72LGr0sskfPkLQAnc4dXDqrX"
+            alt="" width="70%" height="70%">
+
+    </div>
+    <div>
+        <p>
+            Kể từ ngày 29/05/2022, Ví điện tử KTN chính thức mở cửa. Đây là ví điện tử có thể
+            hỗ trợ bạn trong việc mua sắm và giao dịch với hơn trăm dịch vụ và tiện ích cùng với hàng
+            ngàn ưu đãi. Đây chính là ví điện tử mà mọi người dùng có thể hằng mong ước.
+        </p>
+        <h5>Sứ mệnh công ty</h5>
+        <p>
+            Chúng tôi sẽ giúp cho quý khách an toàn giao dịch và mua sắm. Sự hài lòng của quý khách đó chính
+            là niềm vui và cũng là sự nỗ lực của chúng tôi.
+        </p>
+        <h5>Ưu đãi đặc biệt</h5>
+        <p>
+            Chúng tôi sẽ ưu đãi miễn phí cho quý khách nếu quý khách có nhu cầu mở ví điện tử của chúng tôi.
+            Đây là ưu đãi có giới hạn, còn chần chờ gì nữa mà không mở ví điện tử ngay thôi!
+        </p>
+    </div>
+</div>
