--- a/views/menu/deposit.hbs
+++ b/views/menu/deposit.hbs
@@ -22,6 +22,6 @@
         <div class="mt-3 mb-3">
             <h4 class="mt-3 text-end">Tổng tiền: <span class="text-danger"  id="u-deposit-total">0 đ</span></h4>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success u-btn-submit">Submit</button>
     </form>
 </div>
