--- a/views/menu/withdraw.hbs
+++ b/views/menu/withdraw.hbs
@@ -27,6 +27,6 @@
             <h4 class="mt-3 text-end">Phí dịch vụ (5%): <span class="text-primary" id="u-menu-fee-withdraw">0 đ</span></h4>
             <h4 class="mt-3 text-end">Tổng tiền: <span class="text-danger"  id="u-menu-total">0 đ</span></h4>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success u-btn-submit">Submit</button>
     </form>
 </div>
