--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,8 +12,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-
   <link rel="stylesheet" href="/css/style.css">
 
 
@@ -22,8 +20,8 @@
 <body>
 
   <nav id="navbar" class="navbar navbar-expand-lg bg-light navbar-light shadow-sm px-5 py-3 py-lg-0">
-    <a href="" class="navbar-brand p-0">
-      <h1 class="m-0 text-uppercase text-secondary"><i class="fa-solid fa-money-bill-transfer text-success"></i>K.T.N
+    <a href="/" class="navbar-brand p-0">
+      <h1 class="text-uppercase text-secondary"><img class="pe-2 pb-1" src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg" witdth="45" height="45" ></img>K.T.N
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -36,11 +34,13 @@
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Dịch vụ</a>
           <div class="dropdown-menu m-0">
             <a href="blog.html" class="dropdown-item"></a>
-            <a href="detail.html" class="dropdown-item">Nạp tiền</a>
-            <a href="team.html" class="dropdown-item">Rút Tiền</a>
-            <a href="/creditcards" class="dropdown-item">Chuyển tiền</a>
-            <a href="/creditcards" class="dropdown-item">Mua thẻ</a>
-            <a href="/creditcards" class="dropdown-item">Lịch sử giao dịch</a>
+            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseDeposit">Nạp tiền</a>
+            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseWithdraw">Rút Tiền</a>
+            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransfer">Chuyển
+              tiền</a>
+            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseCard">Mua thẻ</a>
+            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransHistory">Lịch sử giao
+              dịch</a>
           </div>
         </div>
 
@@ -51,7 +51,7 @@
 
       <div class="d-none d-lg-flex align-items-center ps-4">
         <a href="/login" class="nav-item nav-link">Đăng nhập</a>
-        <a href="/login" class="nav-item nav-link text-success">Đăng kí</a>
+        <a href="/register" class="nav-item nav-link text-success">Đăng kí</a>
       </div>
   </nav>
   <div class="container">
@@ -87,10 +87,10 @@
         <h4 class="text-light">Dịch vụ</h4>
         <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
         <div class="d-flex flex-column justify-content-start">
-          <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nạp tiền</a>
-          <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Rút tiền</a>
-          <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Mua thẻ</a>
-          <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Lịch sử giao dịch</a>
+          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseDeposit"><i class="fa fa-angle-right me-2"></i>Nạp tiền</a>
+          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseWithdraw"><i class="fa fa-angle-right me-2"></i>Rút tiền</a>
+          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseCard"><i class="fa fa-angle-right me-2"></i>Mua thẻ</a>
+          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransHistory"><i class="fa fa-angle-right me-2"></i>Lịch sử giao dịch</a>
         </div>
       </div>
 
@@ -116,7 +116,7 @@
         <div class="d-flex">
           <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
               class="fab fa-twitter"></i></a>
-          <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
+          <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="https://www.facebook.com/adtruongdinhkien/"><i
               class="fab fa-facebook-f"></i></a>
           <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
               class="fab fa-linkedin-in"></i></a>
