--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -44,7 +44,7 @@
           </div>
         </div>
 
-        <a href="/profile" class="nav-item nav-link">Thông tin cá nhân</a>
+        <a  data-bs-toggle="collapse" data-bs-target="#multiCollapseInformation" class="nav-item nav-link">Thông tin cá nhân</a>
 
 
       </div>
