--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,44 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký tài khoản</title>
-</head>
-<style>
-    /* CHÚ Ý: STYLE NÀY XÀI CHUNG LOGIN PAGE  */
-    .u-login-gradient-custom {
-        /* fallback for old browsers */
-        background-color: #71d42f;
-    }
-
-    .u-login-card-padding {
-        padding-top: 0.5em;
-        padding-bottom: 0.5em;
-    }
-
-    .u-login-btn-login {
-        width: 50%;
-    }
-
-    #u-login-background-body {
-        background-image: linear-gradient(#037ade, #03e5b7);
-    }
-</style>
-
 <body id="u-login-background-body">
     <section class="vh-100">
-        <div class="container py-5 h-100">
+        <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-9 mb-4 mb-lg-0">
-                    <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="card mb-3">
                         <div class="row g-0">
-                            <div class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center" "
-                                style=" border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                                <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
-                                    alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                            <div
+                                class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center">
+                                <a href="/">
+                                    <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
+                                        alt="Avatar" class="img-fluid my-5" width="80" />
+                                </a>
                             </div>
                             <div class="col-md-8 u-login-card-padding">
                                 <div class="card-body p-4">
@@ -92,7 +64,6 @@
                                                     </div>
                                                 </div>
 
-
                                             </div>
                                             <!-- TODO: FILL IN URL SUBMIT BUTTON-->
                                             <div class="d-flex justify-content-center py-3">
@@ -100,7 +71,7 @@
                                                     ký</button>
                                             </div>
                                             <div class="d-flex justify-content-end">
-                                                <a href="user_login.html" class="text-success">Đăng nhập tài khoản</a>
+                                                <a href="/login" class="text-success">Đăng nhập tài khoản</a>
                                             </div>
                                         </form>
                                     </div>
@@ -113,10 +84,3 @@
         </div>
     </section>
 </body>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
-</html>
