--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@
     border-radius: 10px;
 }
 
-.icon{
+.icon {
     width: 4rem !important;
     height: 4rem !important;
 }
@@ -31,13 +31,18 @@
 
 
 body {
-    
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     background-image: url("https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-05.jpg");
 }
 
 html {
     height: 100%;
 }
+
 body {
     min-height: 100%;
 }
@@ -49,17 +54,33 @@ a:active {
     text-decoration: none;
 }
 
-.card-body{
+.card-body {
     border-radius: 20px 20px;
 }
 
-#buycard, #d-password, #d-id-card{
+#buycard,
+#d-password,
+#d-id-card,
+#d-id-profile {
     border-radius: 20px 20px;
     background-color: rgb(240, 240, 240);
 }
 
-.u-btn-submit{
-    width:200px;
+.u-btn-submit {
+    width: 200px;
 }
 
-/* ---------------------- CARD------------ */
+/* ---------------------- LOGIN------------ */
+.u-login-gradient-custom {
+    /* fallback for old browsers */
+    background: #71d42f;
+}
+
+.u-login-card-padding {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.u-login-btn-login {
+    width: 50%;
+}
