--- a/views/menu/profile.hbs
+++ b/views/menu/profile.hbs
@@ -1,4 +1,4 @@
-<div class="card m-5" >
+<div class="card" id="d-id-profile">
     <div class="row g-0">
         <div class="col-md-4 gradient-custom text-center text-primary">
             <img width="100" src="https://scontent.fsgn13-2.fna.fbcdn.net/v/t1.6435-1/53202193_2265097137076346_1016337146547535872_n.jpg?stp=dst-jpg_s480x480&_nc_cat=108&ccb=1-7&_nc_sid=7206a8&_nc_ohc=0m6OlJHDB6cAX-HSCVZ&_nc_ht=scontent.fsgn13-2.fna&oh=00_AT8TX2nFfzHkXXq0INzG7JbqbYSXf5jFlzkL2KPO2yBG1g&oe=62BA6FE6" alt="Avatar"
