--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,42 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập</title>
-</head>
-<style>
-    .u-login-gradient-custom {
-        /* fallback for old browsers */
-        background: #71d42f;
-    }
-
-    .u-login-card-padding {
-        padding-top: 1em;
-        padding-bottom: 1em;
-    }
-
-    .u-login-btn-login {
-        width: 50%;
-    }
-    #u-login-background-body {
-        background-image: linear-gradient(#037ade, #03e5b7);
-}
-</style>
-
 <body>
     <section class="vh-100" id="u-login-background-body">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-8 mb-4 mb-lg-0">
-                    <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="card mb-3">
                         <div class="row g-0">
-                            <div class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center" "
-                                style=" border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                                <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
-                                    alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                            <div
+                                class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center">
+                                <a href="/">
+                                    <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
+                                        alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                                </a>
                             </div>
                             <div class="col-md-8 u-login-card-padding">
                                 <div class="card-body p-4">
@@ -50,9 +24,9 @@
                                         <!-- TODO: FILL IN URL IN ACTION-->
                                         <form action="/" method="POST">
                                             <div class="form-group pb-3">
-                                                <label for="userid" class="fw-bold pb-3">UserID</label>
+                                                <label for="userid" class="fw-bold pb-3">Tên đăng nhập</label>
                                                 <input type="text" class="form-control p-2" id="userid"
-                                                     placeholder="Vui lòng nhập User ID">
+                                                    placeholder="Vui lòng nhập User Name">
                                             </div>
                                             <div class="form-group pb-3">
                                                 <label for="userpass" class="fw-bold pb-3">Mật khẩu</label>
@@ -61,10 +35,11 @@
                                             </div>
                                             <!-- TODO: FILL IN URL SUBMIT BUTTON-->
                                             <div class="d-flex justify-content-center py-4">
-                                                <button type="submit" class="btn btn-success u-login-btn-login">Đăng nhập</button>
+                                                <button type="submit" class="btn btn-success u-login-btn-login">Đăng
+                                                    nhập</button>
                                             </div>
                                             <div class="d-flex justify-content-end">
-                                                <a href="user_register.html" class="text-success">Đăng ký tài khoản</a>
+                                                <a href="/register" class="text-success">Đăng ký tài khoản</a>
                                             </div>
                                         </form>
                                     </div>
@@ -77,10 +52,3 @@
         </div>
     </section>
 </body>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
-</html>
