--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,8 @@
   {{#if title}}
   <title>{{title}}</title>
   {{/if}}
+  <meta name="viewport" content="width=device-width,user-scalable=no">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
   <link href="img/favicon.ico" rel="icon">
