done except first_login

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -56,7 +56,7 @@
                 class=" nav-link dropdown-toggle rounded-circle" data-bs-toggle="dropdown" data-bs-target="#multiCollapseInformation"  />
           <div class="dropdown-menu m-0">
             <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseInformation">Thông tin cá nhân</a>
-            <a href="/logout" class="dropdown-item" data-bs-toggle="collapse"> Đăng xuất</a>
+            <a href="/logout" class="dropdown-item"> Đăng xuất</a>
           </div>
         </div>
       </div>
