--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -26,9 +26,9 @@
                                         <form action="/login" method="POST">
                                             <div class="form-group pb-3">
                                                 <label for="userid" class="fw-bold pb-3">Tên đăng nhập</label>
-                                                <input type="tel" class="form-control p-2" id="userid" required
+                                                <input type="text" class="form-control p-2" id="userid" required
                                                     name="userid" placeholder="Tên đăng nhập có 10 chữ số"
-                                                    pattern="[0-9]{10}">
+                                                    >
                                             </div>
                                             <div class="form-group pb-3">
                                                 <label for="userpass" class="fw-bold pb-3">Mật khẩu</label>
