--- a/views/menu/card.hbs
+++ b/views/menu/card.hbs
@@ -1,56 +1,60 @@
-<div id="buycard" class="d-flex">
- 
-    <div class="col-8 m-2 d-flex justify-content-evenly">
+<div id="buycard" class="container">
+
+    <div class="d-flex justify-content-center pt-2">
         {{!-- DATA SOURSE --}}
-        <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard1" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+        <input type="radio" class="btn-check btn-buy-card p-3" name="btnradio" id="selectcard1" autocomplete="off"
+            onclick="buyCard('Viettel');">
         <label class=" btn-buy-card text-secondary fw-bold" for="selectcard1">
             <img src=" https://static.mservice.io/img/momo-upload-api-ic_viettel@3x-181218153720.png"
                 class="icon ps-2 me-4" alt=""> Viettel
         </label>
-
+        <a class="m-2"></a>
         <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard2" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards" onclick="buyCard('Mobifone');">
         <label class=" btn-buy-card text-secondary fw-bold" for="selectcard2">
             <img src="https://static.mservice.io/img/momo-upload-api-ic_mobifone@3x-181218160800.png"
                 class="icon ps-2 me-4" alt="">Mobifone
-        </label>
-
+        </label> 
+        <a class="m-2"></a>
         <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard3" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards" onclick="buyCard('Vinaphone');">
         <label class=" btn-buy-card text-secondary fw-bold " for="selectcard3">
             <img src="https://static.mservice.io/img/momo-upload-api-ic_vinaphone@3x-181218163535.png"
                 class="icon ps-2 me-4" alt="">Vinaphone
         </label>
 
+         
     </div>
-
-       {{!-- DATA TARGET --}}
-    <div class="p-2">
-        <div class="collapse multi-collapse" id="multiCollapseCards" data-bs-parent="#buycard">
-            <div class="card card-body">
+    {{!-- DATA TARGET --}}
+    <div class="row p-2">
+        <div class="col-4"></div>
+        <div id="showCard" class="col-6">
+            <div class="card card-body p-5">
                 {{!-- EDIT ACTION --}}
-                <form action="" method="post">
-                    <div class="mb-3">
-                        <label for="slcard" class="form-label"> Chọn mệnh giá</label>
-                        <select class="form-control form-select form-select-sm" id="slcard">
-                            <option value="0"> </option>
-                            <option value="1">10.000 VNĐ</option>
-                            <option value="2">20.000 VNĐ</option>
-                            <option value="3">50.000 VNĐ</option>
-                            <option value="4">100.000 VNĐ</option>
-                        </select>
+                <div class="mb-3">
+                    <h4 class="text-success" id="selectedCard"> </h4>
+                    <label for="slcard" class="form-label"> Chọn mệnh giá</label>
+                    <select name="value" class="form-control form-select form-select-sm" id="slcard"
+                        onchange="calculateCardPrice()">
+                        <option value="0"> </option>
+                        <option value="1">10.000 VNĐ</option>
+                        <option value="2">20.000 VNĐ</option>
+                        <option value="3">50.000 VNĐ</option>
+                        <option value="4">100.000 VNĐ</option>
+                    </select>
+                </div>
+                {{!-- SELECTED CARD --}}
+                <div class="mb-3">
+                    <label for="card-quantity" class="form-label"> Nhập số lượng</label>
+                    <input id="card-quantity" type="number" value="1" name="quantity" min="1" max="5"
+                        onchange="calculateCardPrice()">
+                    <div class="mt-3">
+                        <label class="form-label"> Tổng tiền: <strong class="text-danger" id="totalPriceCard">0</strong>
+                            VNĐ <p>(Sale còn 0Đ)</p></label>
                     </div>
-                    {{!-- QUANTITY --}}
-                    <div class="mb-3" id="slQuantity">
-                        <label for="card-quantity" class="form-label"> Nhập số lượng</label>
-                        <input id="card-quantity" type="number" id="slQuantity" name="quantity" min="1" max="5">
-                        <div class="mt-3" id="slQuantity">
-                            <label class="form-label"> Tổng tiền: 0VNĐ</label>
-                        </div>
-                    </div>
-
-                </form>
+                    <button type="submit" class="btn btn-success" id="buyCardBtn" onclick="btnBuyCard()"> Xác
+                        nhận</button>
+                </div>
             </div>
         </div>
     </div>
