--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,56 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký tài khoản</title>
-</head>
-<style>
-    /* CHÚ Ý: STYLE NÀY XÀI CHUNG LOGIN PAGE  */
-    .u-login-gradient-custom {
-        /* fallback for old browsers */
-        background-color: #71d42f;
-    }
-
-    .u-login-card-padding {
-        padding-top: 0.5em;
-        padding-bottom: 0.5em;
-    }
-
-    .u-login-btn-login {
-        width: 50%;
-    }
-
-    #u-login-background-body {
-        background-image: linear-gradient(#037ade, #03e5b7);
-    }
-</style>
-
 <body id="u-login-background-body">
     <section class="vh-100">
-        <div class="container py-5 h-100">
+        <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-lg-9 mb-4 mb-lg-0">
-                    <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="card mb-3">
                         <div class="row g-0">
-                            <div class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center" "
-                                style=" border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                                <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
-                                    alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                            <div
+                                class="col-md-4 u-login-gradient-custom text-center text-white justify-content-center d-flex align-items-center">
+                                <a href="/">
+                                    <img src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg"
+                                        alt="Avatar" class="img-fluid my-5" width="80" />
+                                </a>
                             </div>
                             <div class="col-md-8 u-login-card-padding">
                                 <div class="card-body p-4">
                                     <!-- TODO: DO SOMETHING WITH ALERT-->
-                                    <div class="alert alert-danger" role="alert">
-                                        This is a danger alert—check it out!
+                                    <div id="register_error" class="alert alert-danger" role="alert">
+                                        
                                     </div>
 
                                     <h3 class="text-center mb-2">ĐĂNG KÝ</h3>
                                     <div class="row pt-1">
                                         <!-- TODO: FILL IN URL IN ACTION-->
-                                        <form action="/" method="POST" enctype="multipart/form-data">
+                                        
                                             <div class="form-group pb-2">
                                                 <label for="user_phone" class="fw-bold pb-2">Số điện thoại</label>
                                                 <input type="tel" class="form-control p-2" id="user_phone" required
@@ -62,7 +34,7 @@
                                                     placeholder="Vui lòng nhập email">
                                             </div>
                                             <div class="form-group pb-2">
-                                                <label for="user_name" class="fw-bold pb-2">Họ và tên khách hàng</label>
+                                                <label for="user_name" class="fw-bold pb-2">Họ và tên </label>
                                                 <input type="text" class="form-control p-2" id="user_name" required
                                                     placeholder="Vui lòng nhập họ và tên">
                                             </div>
@@ -81,28 +53,26 @@
                                                     <div class="col-md-6 col-12">
                                                         <label for="user_cmnd1" class="form-label fw-bold">Ảnh mặt trước
                                                             CMND</label>
-                                                        <input class="form-control" type="file" id="user_cmnd1"
+                                                        <input class="form-control" type="file" id="user_cmnd1" single
                                                             required>
                                                     </div>
                                                     <div class="col-md-6 col-12">
                                                         <label for="user_cmnd2" class="form-label fw-bold">Ảnh mặt sau
                                                             CMND</label>
-                                                        <input class="form-control" type="file" id="user_cmnd2"
+                                                        <input class="form-control" type="file" id="user_cmnd2" single
                                                             required>
                                                     </div>
                                                 </div>
 
-
                                             </div>
                                             <!-- TODO: FILL IN URL SUBMIT BUTTON-->
                                             <div class="d-flex justify-content-center py-3">
-                                                <button type="submit" class="btn btn-success u-login-btn-login">Đăng
+                                                <button type="submit" onclick="sendInformationRegister(event)" class="btn btn-success u-login-btn-login">Đăng
                                                     ký</button>
                                             </div>
                                             <div class="d-flex justify-content-end">
-                                                <a href="user_login.html" class="text-success">Đăng nhập tài khoản</a>
+                                                <a href="/login" class="text-success">Đăng nhập tài khoản</a>
                                             </div>
-                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -113,10 +83,3 @@
         </div>
     </section>
 </body>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
-</html>
