--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -15,9 +15,9 @@
                             <div class="col-md-8 u-login-card-padding">
                                 <div class="card-body p-4">
                                     <!-- TODO: DO SOMETHING WITH ALERT-->
-                                    <div id="register_error" class="alert alert-danger" role="alert">
+                                    <h5 id="register_error" class="alert alert-danger" role="alert">
                                         
-                                    </div>
+                                    </h5>
 
                                     <h3 class="text-center mb-2">ĐĂNG KÝ</h3>
                                     <div class="row pt-1">
