--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -6,7 +6,7 @@
   <title>{{title}}</title>
   {{/if}}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <link href="img/favicon.ico" rel="icon">
+   <link href="https://cdn-icons-png.flaticon.com/512/272/272525.png" rel="icon">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
