--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -70,8 +70,8 @@
       </div>
       
       <div class="d-none d-lg-flex align-items-center ps-4">
-        <a href="/login" class="nav-item nav-link">Đăng nhập</a>
-        <a href="/login" class="nav-item nav-link text-success">Đăng kí</a>
+        <a href="/logout" class="nav-item nav-link">Đăng xuất</a>
+        {{!-- <a href="/login" class="nav-item nav-link text-success">Đăng kí</a> --}}
       </div>
   </nav>
     <div class="container">
